examples/pass/F-FF.stl
/** Fence2Elim **/ 
global x; 
local l; 

/** Optimised **/ 
fenceSC; 
fenceSC; 

/** Unoptimised **/ 
fenceSC; 
