examples/fail/RxlWym-WymRxl.stl
/** TwolocSwap **/
global x,y; 
local l, m; 

/** Optimised **/ 
write(y,m); 
read(x,l); 

/** Unoptimised **/ 
read(x,l);  
write(y,m);  

